# lightrec

./: CMakeLists.txt  Makefile  arch.h  blockcache.c  blockcache.h  config.h.cmakein  constprop.c  constprop.h  debug.h  disassembler.c  disassembler.h  emitter.c  emitter.h  interpreter.c  interpreter.h  lightrec-config.h.cmakein  lightrec-private.h  lightrec.c  lightrec.h  memmanager.c  memmanager.h  optimizer.c  optimizer.h  reaper.c  reaper.h  recompiler.c  recompiler.h  regcache.c  regcache.h  rw-callbacks.c  rw-callbacks.h
